--- a/css/appointment.css
+++ b/css/appointment.css
@@ -5,14 +5,9 @@
     padding-bottom: 2rem;
 }
 
-legend:first-of-type
+div legend
 {
-    margin: 0 0 .5rem 0;
-}
-
-legend
-{
-    margin: 1rem 0 .5rem 0;
+    margin: 1rem 0 .5rem 0 ;
     text-align: left;
 }
 
