--- a/css/prices.css
+++ b/css/prices.css
@@ -36,6 +36,14 @@ details p
     padding-left: 1.2rem;
 }
 
+@media only screen and (max-width: 500px)
+{
+    table
+    {
+        font-size: 1rem;
+    }
+}
+
 @media print 
 {
 
