Upload: alt style fix

--- a/css/base_style.css
+++ b/css/base_style.css
@@ -184,6 +184,14 @@ footer h3
     text-align: center;
 }
 
+@media only screen and (max-width: 1200px)
+{
+    nav#styleswitch
+    {
+        display: none;
+    }
+}
+
 @media only screen and (max-width: 500px) {
     .content main p, ul
     {
